# mt_engine_20

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  mt_engine.sln  setting.json  vcpkg.json
Engine/: CMakeLists.txt  Constants.ixx  Debug.ixx  Engine.cpp  Engine.filters  Engine.ixx  Engine.vcxproj  Engine.vcxproj.filters  Error.ixx  Game.ixx  KeyboardInputMessage.ixx  LogManager.cpp  MathHelper.ixx  ObjectPool.ixx  README.md  Status.ixx  StopWatch.ixx  Task.ixx  TimeManager.cpp
Engine/error/: CmakeLists.txt  Error.ixx
Engine/event/: CmakeLists.txt  Event.ixx  EventHandlerInterface.ixx  EventManager.ixx  EventPackageInterface.ixx  EventQueue.ixx
Engine/font/: CmakeLists.txt  FontManager.ixx
Engine/geometry/: CmakeLists.txt  Geometry.cpp  Geometry.ixx  MeshData.ixx  MeshGeometry.ixx  SubmeshGeometry.ixx  Vertex.ixx
Engine/gsl/: CmakeLists.txt  assert  gsl.ixx  pointers.ixx
Engine/input/: BasicInputManager.cpp  BasicInputManager.ixx  CmakeLists.txt  InputContext.ixx  InputDataType.ixx  InputDevice.ixx  InputManager.cpp  InputManager.ixx  InputManagerInterface.ixx  InputModel.ixx  InputType.ixx  MicrosoftVirtualKeyCode.ixx  README.md  VirtualKeyCode.ixx  notes.md
Engine/input/model/: CmakeLists.txt  InputContext.ixx  InputDataType.ixx  InputDevice.ixx  InputModel.ixx  InputType.ixx  MicrosoftVirtualKeyCode.ixx  VirtualKeyCode.ixx
Engine/math/: CmakeLists.txt  MathUtility.ixx
Engine/memory/: CmakeLists.txt  Handle.ixx  MakeUnique.ixx  ObjectPool.ixx
Engine/renderer/: Adapters.ixx  Camera.cpp  Camera.ixx  CmakeLists.txt  DirectXRenderer.cpp  DirectXRenderer.ixx  DirectXUtility.ixx  FrameResource.ixx  Geometry.ixx  MeshGeometry.ixx  RenderItem.ixx  Renderer.ixx  RendererInterface.ixx  SubmeshGeometry.ixx  UploadBuffer.ixx  d3dx12.h
Engine/renderer/model/: Camera.cpp  Camera.ixx  CmakeLists.txt  FrameResource.ixx  MeshGeometry.ixx  RenderItem.ixx  RendererModel.ixx  SubmeshGeometry.ixx  UploadBuffer.ixx  Vertex.ixx
Engine/source/: CmakeLists.txt
Engine/source/Engine/: CMakeLists.txt  Engine.cpp  Engine.ixx  FontManager.ixx  MathHelper.ixx  ObjectPool.ixx  Pool.hpp  Status.ixx  precompiled.cpp  precompiled.hpp
Engine/source/Engine/command/: CmakeLists.txt  Command.cpp  Command.ixx  CommandManager.ixx
Engine/source/Engine/input/: CmakeLists.txt  IM_KeyDown.ixx  IM_KeyUp.ixx  IM_MouseDown.ixx  IM_MouseMove.ixx  IM_MouseUp.ixx  InputContext.ixx  InputDataType.ixx  InputDevice.ixx  InputManager.cpp  InputManager.ixx  InputMessage.cpp  InputMessage.ixx  InputModel.ixx  InputType.ixx  KeyboardKeys.ixx  MicrosoftVirtualKeyCode.ixx  MouseInputMessage.ixx  VirtualKeyCode.ixx
Engine/source/Engine/logging/: CmakeLists.txt  Log.ixx  LogManager.ixx
Engine/source/Engine/renderer/: Camera.cpp  Camera.ixx  CmakeLists.txt  DirectXRenderer.cpp  DirectXRenderer.ixx  DirectXUtility.ixx  Geometry.ixx  UploadBuffer.ixx  Vertex.ixx
Engine/source/Engine/time/: Alarm.cpp  Alarm.ixx  AlarmManager.cpp  AlarmManager.ixx  Chronometer.cpp  Chronometer.ixx  CmakeLists.txt  StopWatch.cpp  StopWatch.ixx  Time.ixx  TimeManager.cpp  TimeManager.ixx  Timer.ixx
Engine/source/Engine/windows/: CmakeLists.txt  WM_Close.cpp  WM_Destroy.cpp  WM_Destroy.ixx  WM_EnterSizeMove.cpp  WM_ExitSizeMove.ixx  WM_Input.cpp  WM_KeyUp.cpp  WM_KeyUp.ixx  WM_LeftMouseButtonUp.cpp  WM_LeftMouseButtonUp.ixx  WM_MenuChar.ixx  WM_MouseMove.ixx  WM_Move.ixx  WM_Moving.ixx  WM_NonClientMouseLeave.ixx  WM_Paint.ixx  WM_RightMouseButtonDown.cpp  WM_RightMouseButtonUp.ixx  WM_SetText.ixx  WM_Size.cpp  WM_Size.ixx  WindowManager.cpp  WindowManager.ixx  WindowsMessage.ixx  WindowsMessageManager.cpp  WindowsMessageManager.ixx
Engine/source/Engine/windows/messages/: CmakeLists.txt  WM_Activate.cpp  WM_Activate.ixx  WM_CaptureChanged.ixx  WM_Close.cpp  WM_Close.ixx  WM_Destroy.cpp  WM_EnterSizeMove.cpp  WM_EnterSizeMove.ixx  WM_EraseBackground.cpp  WM_ExitSizeMove.cpp  WM_ExitSizeMove.ixx  WM_GetIcon.cpp  WM_GetMinMaxInfo.cpp  WM_GetMinMaxInfo.ixx  WM_Input.cpp  WM_Input.ixx  WM_KeyDown.cpp  WM_KeyDown.ixx  WM_KeyUp.cpp  WM_LeftMouseButtonDown.cpp  WM_LeftMouseButtonDown.ixx  (+37 more)
Engine/source/Game/: EngineDemo.cpp  EngineDemo.ixx
Engine/source/Shaders/: CmakeLists.txt
Engine/source/luna/: DDSTextureLoader12.cpp  DDSTextureLoader12.h  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.cpp  UploadBuffer.ixx  d3dUtil.cpp  d3dUtil.h
Engine/task/: CmakeLists.txt  Task.ixx
Engine/time/: Alarm.cpp  Alarm.ixx  AlarmManager.cpp  AlarmManager.ixx  AlarmManagerInterface.ixx  CmakeLists.txt  StandardAlarmManager.ixx  StandardTimeManager.cpp  StandardTimeManager.ixx  StopWatch.cpp  StopWatch.ixx  TimeManager.cpp  TimeManager.ixx  TimeManagerInterface.ixx  TimeManagerTasks.cpp  TimeManagerTasks.ixx  Timer.ixx
Engine/time/model/: Alarm.ixx  CmakeLists.txt  StopWatch.ixx  TimeModel.ixx  Timer.ixx
Engine/utility/: CmakeLists.txt  Name.ixx
Engine/windows/: BaseWindowsMessage.ixx  CmakeLists.txt  Window.ixx  WindowManager.cpp  WindowManager.ixx  WindowManagerInterface.ixx  Windows.ixx  WindowsMessage.ixx  WindowsMessageManager.cpp  WindowsMessageManager.ixx  WindowsMessageManagerInterface.cpp  WindowsMessageManagerInterface.ixx  WindowsWindowManager.cpp  WindowsWindowManager.ixx
Engine/windows/messages/: CmakeLists.txt  WM_Activate.cpp  WM_Activate.ixx  WM_CaptureChanged.cpp  WM_CaptureChanged.ixx  WM_Close.cpp  WM_Close.ixx  WM_Destroy.cpp  WM_Destroy.ixx  WM_EnterSizeMove.cpp  WM_EnterSizeMove.ixx  WM_EraseBackground.cpp  WM_EraseBackground.ixx  WM_ExitSizeMove.cpp  WM_ExitSizeMove.ixx  WM_GetIcon.cpp  WM_GetIcon.ixx  WM_GetMinMaxInfo.cpp  WM_GetMinMaxInfo.ixx  WM_Input.cpp  WM_Input.ixx  WM_KeyDown.cpp  WM_KeyDown.ixx  WM_KeyUp.cpp  WM_KeyUp.ixx  WM_LeftMouseButtonDown.cpp  WM_LeftMouseButtonDown.ixx  WM_LeftMouseButtonUp.cpp  WM_LeftMouseButtonUp.ixx  WM_MenuChar.cpp  WM_MenuChar.ixx  WM_MiddleMouseButtonDown.cpp  WM_MiddleMouseButtonDown.ixx  WM_MiddleMouseButtonUp.cpp  WM_MiddleMouseButtonUp.ixx  WM_MouseMove.cpp  WM_MouseMove.ixx  WM_MouseWheel.cpp  WM_MouseWheel.ixx  WM_Move.cpp  (+37 more)
(+23 files in other folders)
